# robotic_systems

./: README.md
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/srv/: MySrv.srv
py_pkg/: package.xml  setup.py
py_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
py_pkg/install/py_pkg/lib/py_pkg/: client  joint  node  parameters  publisher  server  subscriber
py_pkg/install/py_pkg/share/py_pkg/: package.sh  package.xml
py_pkg/launch/: topic_launch.py
py_pkg/py_pkg/: 01_node.py  02_publisher.py  03_subscriber.py  04_server.py  05_client.py  06_parameters.py  07_action_server.py  08_action_client.py  my_joint_publisher.py
scara/: package.xml  setup.cfg  setup.py
scara/launch/: scara_launch.py
scara/rviz/: rviz_basic_settings.rviz
scara/scara/: client.py  joint_publisher.py  scara_joint_publisher.py  trajectory_generator.py  transparent_publisher.py  virtual_pendant.py
scara/urdf/: scara.urdf
scara_interfaces/: CMakeLists.txt  package.xml
scara_interfaces/action/: TrajectoryExecution.action
scara_interfaces/srv/: JointTrajectory.srv
