<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="invictus@todo.todo">invictus</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>threading</depend>
  <depend>tk</depend>
  <depend>numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
